force-app/main/default/objects/Case/fields/AccountExtId__c.field-meta.xml
<CustomField>
    <fullName>AccountExtId__c</fullName>
    <description>External ID used to reference Account records.</description>
    <externalId>true</externalId>
    <label>Account External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>