force-app/main/default/objects/Case/fields/CaseExtId__c.field-meta.xml
<CustomField>
    <fullName>CaseExtId__c</fullName>
    <description>External ID used by loaders to reference Case records.</description>
    <externalId>true</externalId>
    <label>Case External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>