force-app/main/default/objects/Case/fields/First_Response_Time_Min__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time_Min__c</fullName>
    <description>Time to first response in minutes.</description>
    <label>First Response Time (Min)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>