force-app/main/default/objects/Case/fields/Resolve_Time_Min__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Time_Min__c</fullName>
    <description>Total time to resolution in minutes.</description>
    <label>Resolve Time (Min)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>