force-app/main/default/objects/Case/fields/SLA_Due__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due__c</fullName>
    <description>Date by which the case should be resolved under SLA.</description>
    <label>SLA Due</label>
    <type>Date</type>
</CustomField>